css/mods.css
#downloadMod {
    position: absolute;
    left: 50%;
    transform: translateX(-50%);

    display: inline-block;
    border: 1px solid var(--primary);
    background-color: var(--primary);
    border-radius: var(--border-radius);
    width: -moz-fit-content;
    width: fit-content;

    margin: 5px;
    padding: 5px;
    color: white;
}

a:link {
    text-decoration: none;
}

a:visited {
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
}

a:active {
    text-decoration: none;
}

.wrapper {
    display: grid;
    grid-auto-flow: column;
    grid-template-columns: 75% 25%;
    grid-template-rows: 50% 50%;
    gap: 10px 20px;
    grid-template-areas:
        "nome-gioco cerca"
        "nome-mod cerca";
    width: 80%;
    justify-content: center;

    padding-bottom: 20px;
}

.wrapper-right {
    grid-area: cerca;
}

.wrapper-gameSelect {
    grid-area: nome-gioco;
}

.wrapper-modNameInput {
    grid-area: nome-mod;
}

.wrapper-left {
    display: flex;
    flex-direction: column;
    /* width: 80%; */
    margin: 5px 0;
    padding-left: 10%;
    justify-content: flex-start;
}

.wrapper-left>* {
    display: flex;
    justify-content: flex-start;
    flex-direction: row;
    align-items: center;
}

.wrapper-right {
    display: flex;
    height: 151px;
    width: 50%;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.wrapper-gameSelect,
.wrapper-modNameInput {
    margin: 5px 0;
}

.wrapper-modNameInput {
    margin-bottom: 0;
}

.wrapper-gameSelect>p,
.wrapper-modNameInput>p,
.autocomplete-item>p {
    display: flex;
    width: 10%;
    margin: 0;
    margin-right: 1%;
    margin-left: 1%;
    text-align: center;
    justify-content: center;
    align-items: center;
}

#gameSelect,
#modNameInput {
    width: 100%;
    margin-bottom: 0;
}

#search {
    margin: 0;
}

#autocomplete-list {
    display: flex;
    flex-direction: column;
}

.autocomplete-item {
    width: 100%;
    display: flex;
    flex-direction: row;
    align-items: center;
    margin: 0;
}

.autocomplete-item>p {
    opacity: 0%;
    width: 10%;
    margin-right: 1%;
    margin-left: 1%;
}

span {
    width: 100%;
}

/* Risultato */

@media (max-width: 1450px) {
    .result {
        display: grid;
        grid-auto-flow: column;
        grid-auto-rows: 1fr;
        grid-template-columns: 1fr;
        grid-template-rows: 1fr;
        gap: 10px 20px;
        grid-template-areas:
            "left-result";
        padding-top: 30px;
    }

    .left-result {
        display: grid;
        grid-template-columns: 1fr;
        grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
        gap: 0px 0px;
        grid-template-areas:
            "."
            "."
            "."
            "."
            ".";
        grid-area: left-result;
    }

    .right-result {
        display: none !important;
    }
}

@media (min-width: 1450px) {
    .result {
        display: grid;
        grid-template-columns: 1.5fr 0.5fr;
        grid-template-rows: 1fr;
        grid-auto-rows: 1fr;
        gap: 10px 20px;
        grid-auto-flow: column;
        grid-template-areas:
            "left-result right-result";
        padding-top: 30px;
    }

    .left-result {
        display: grid;
        grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
        grid-auto-columns: 1fr;
        gap: 0px 0px;
        grid-auto-flow: row;
        grid-template-areas:
            ""
            ""
            ""
            ""
            ""
            "";
        grid-area: left-result;
    }

    .right-result {
        grid-area: right-result;
        align-self: start;
        grid-area: right-result;
    }
}




/* #modName {
    margin-bottom: calc(var(--typography-spacing-vertical) / 2);
    margin-top: calc(var(--typography-spacing-vertical) / 2);
} */

/* #modAuthor {
    margin: 0;
    font-size: smaller;
} */

/* #left-result {
    width: 60%;
    height: 100%;
    margin: .5% 1% !important;
} */

/* #right-result {
    width: 40%;
    height: 100%;
    margin: .5% 1%;
} */

@media (max-width: 1100px) {
    .gameName,
    .modName {
        display: none !important;
    }
}

.left-result {
    display: flex;
    flex-direction: column;
    /* width: 80%; */
    margin: 5px 0;
    padding-left: 10%;
    padding-right: 2.5%;
}

.right-result {
    display: flex;
    flex-direction: column;
    /* width: 10%; */
    height: 151px;
    /* margin: 0 5%; */
    align-items: center;
    justify-content: center;
    padding-right: 10%;
    padding-top: 30%;
    padding-left: 2.5%;
}

.tabs {
    display: flex;
    width: 100%;
}

.tab {
    list-style-type: none;
    height: 60px;
    margin: 0;
}

.tab-button {
    display: flex;
    align-items: center;
    border-bottom: 1px solid var(--primary) !important;
    border-radius: 0;


    background-color: transparent;
    border: none;
    margin: 0;
    outline: none;
    cursor: pointer;
    color: var(--primary);
}

.svg {
    width: 15px;
    height: 15px;
    margin-left: 10px;
    fill: var(--primary);
}

.tab-content {
    padding-left: var(--spacing);
}

/* #loading {
    width: 16px;
    height: 16px;
    position: relative;
} */

#page-selector {
    margin-bottom: 10px;
    display: flex;
    align-items: center;
}

.page-button {
    display: flex;
    margin: 0;
    padding: 0 5px;
    width: 5%;
    height: 1% !important;
    background-color: transparent;
    border: 0;
    color: var(--primary);
    align-items: center;
    justify-content: center;
}

#page-selector>button>img {
    width: 1rem;
}

#page-next {
    transform: rotate(180deg);
}

/* #container {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    width: 100%;
    height: 100%;
    padding: 10% 10%;
    margin: 22% 0;
    justify-content: flex-start;

    background-color: #0e1419;
    border-radius: 15px;
} */

/* .page-button:disabled[number="true"] {
    opacity: 100;
} */

